# pytorch_irr_model

./: .gitignore  README.md  pyproject.toml
irr/: constants.py
irr/callbacks/: prediction_dump.py
irr/cli/: gee_python_api.py  kfold.py  predict.py  train_tiny_head.py
irr/data/: datamodule.py  io.py  splits.py
irr/models/: tiny_head.py
irr/training/: config.py  cv.py  train.py
notebooks/: README.md  data_exploration.py  data_overlap_checker.py  plot_curves_confusion.ipynb  predict_nb.py
notebooks/outputs/: overlap_geo_keys.csv
outputs/logs/tiny_head/version_0/: metrics.csv
outputs/logs/tiny_head/version_1/: metrics.csv
outputs/logs/tiny_head/version_10/: metrics.csv
outputs/logs/tiny_head/version_11/: metrics.csv
outputs/logs/tiny_head/version_12/: metrics.csv
outputs/logs/tiny_head/version_13/: hparams.yaml  metrics.csv
outputs/logs/tiny_head/version_14/: metrics.csv
outputs/logs/tiny_head/version_15/: metrics.csv
outputs/logs/tiny_head/version_16/: metrics.csv
outputs/logs/tiny_head/version_17/: metrics.csv
outputs/logs/tiny_head/version_18/: metrics.csv
outputs/logs/tiny_head/version_19/: metrics.csv
outputs/logs/tiny_head/version_2/: metrics.csv
outputs/logs/tiny_head/version_20/: metrics.csv
outputs/logs/tiny_head/version_21/: metrics.csv
outputs/logs/tiny_head/version_3/: metrics.csv
outputs/logs/tiny_head/version_4/: metrics.csv
outputs/logs/tiny_head/version_5/: metrics.csv
outputs/logs/tiny_head/version_6/: metrics.csv
outputs/logs/tiny_head/version_7/: metrics.csv
tests/: test_datamodule.py  test_splits.py
(+29 files in other folders)
